crates/vite_task_plan/tests/plan_snapshots/fixtures/script-hooks/snapshots/query - extra args not passed to hooks.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
info:
  args:
    - run
    - test
    - "--coverage"
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/script-hooks
---
{
  "graph": [
    {
      "key": [
        "<workspace>/",
        "test"
      ],
      "node": {
        "task_display": {
          "package_name": "@test/script-hooks",
          "task_name": "test",
          "package_path": "<workspace>/"
        },
        "items": [
          {
            "execution_item_display": {
              "task_display": {
                "package_name": "@test/script-hooks",
                "task_name": "pretest",
                "package_path": "<workspace>/"
              },
              "command": "echo pretest",
              "and_item_index": null,
              "cwd": "<workspace>/"
            },
            "kind": {
              "Leaf": {
                "InProcess": {
                  "kind": {
                    "Echo": {
                      "strings": [
                        "pretest"
                      ],
                      "trailing_newline": true
                    }
                  }
                }
              }
            }
          },
          {
            "execution_item_display": {
              "task_display": {
                "package_name": "@test/script-hooks",
                "task_name": "test",
                "package_path": "<workspace>/"
              },
              "command": "echo test --coverage",
              "and_item_index": null,
              "cwd": "<workspace>/"
            },
            "kind": {
              "Leaf": {
                "InProcess": {
                  "kind": {
                    "Echo": {
                      "strings": [
                        "test",
                        "--coverage"
                      ],
                      "trailing_newline": true
                    }
                  }
                }
              }
            }
          },
          {
            "execution_item_display": {
              "task_display": {
                "package_name": "@test/script-hooks",
                "task_name": "posttest",
                "package_path": "<workspace>/"
              },
              "command": "echo posttest",
              "and_item_index": null,
              "cwd": "<workspace>/"
            },
            "kind": {
              "Leaf": {
                "InProcess": {
                  "kind": {
                    "Echo": {
                      "strings": [
                        "posttest"
                      ],
                      "trailing_newline": true
                    }
                  }
                }
              }
            }
          }
        ]
      },
      "neighbors": []
    }
  ],
  "concurrency_limit": 10
}
