crates/vite_task_plan/tests/plan_snapshots/fixtures/script-hooks/snapshots/task graph.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: task_graph_json
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/script-hooks
---
[
  {
    "key": [
      "<workspace>/",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/script-hooks",
        "task_name": "build",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo build",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "posttest"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/script-hooks",
        "task_name": "posttest",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo posttest",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "prebuild"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/script-hooks",
        "task_name": "prebuild",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo prebuild",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "pretest"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/script-hooks",
        "task_name": "pretest",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo pretest",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "test"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/script-hooks",
        "task_name": "test",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo test",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  }
]
